fixed css of the boards container in dashboard and changed layout of the board cards to wrap

--- a/src/Pages/ContactPage.css
+++ b/src/Pages/ContactPage.css
@@ -37,7 +37,8 @@
   }
 }
 
-.contact-page__scroll {
+
+/* .contact-page__scroll {
     overflow-y: scroll;
     width: 100%;
     
@@ -47,15 +48,15 @@
   .contact-page__scroll::-webkit-scrollbar {
     width: 10px;
   }
-  /*   
+  
     .boards-scroll::-webkit-scrollbar-track {
         background-color: #cacaca;
         border-radius: 15px;
-    } */
+    }
   .contact-page__scroll::-webkit-scrollbar-thumb {
     background-color: #9b9b9b;
     border-radius: 15px;
-  }
+  } */
 
   .contact__cards-container {
     width: 100%;
