--- a/src/Pages/DashboardPage.css
+++ b/src/Pages/DashboardPage.css
@@ -1,4 +1,6 @@
 .board-card {
+  width: 200px;
+  height: 150px;
   border: 1px solid rgb(255, 255, 255);
   text-align: center;
   padding: 1rem;
@@ -6,7 +8,9 @@
 
 .boards-container {
   width: 100%;
-  height: auto;
+  height: 100%;
+  padding: 2rem;
+  padding-bottom: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,6 +24,11 @@
 }
 
  .dashboard__boards-scroll {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
     overflow-y: scroll;
     width: 100%;
     
@@ -40,14 +49,11 @@
   }
 
 .boards-sub-container {
-  width: 95%;
+  width: 100%;
   height: 100%;
   display: flex;
-
   align-items: center;
   flex-direction: column;
-  margin: 30px;
-  margin-bottom: 0;
   padding: 2rem;
   gap: 1rem;
   background: linear-gradient(to bottom left, #f3f3f3, 30%, #5e22a7);
